k8s/deploy-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-app-deployment
  labels:
    app: game-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: game-app
  template:
    metadata:
      labels:
        app: game-app
    spec:
      containers:
      - name: game-app-container
        image: rpavan222/pavan:2.0
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: storage
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: ebs-sc
