k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: my-app
spec:
  containers:
  - name: mycnt
    image: nginx:latest
    ports:
    - containerPort: 80
