k8s/service-1.yml
apiVersion: v1
kind: Service
metadata:
  name: deploy-service
spec:
  type: LoadBalancer
  selector:
    app: nginx-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
