k8s/service-2.yml
apiVersion: v1
kind: Service
metadata:
  name: game-app-service

spec:
  type: ClusterIP
  selector:
    app: game-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
