k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deploy-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: app1.pavankalyan.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deploy-service
            port:
              number: 80
  - host: app2.pavankalyan.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game-app-service
            port:
              number: 80
